fix scroll on mobile

--- a/components/Toolbar/index.module.sass
+++ b/components/Toolbar/index.module.sass
@@ -12,7 +12,7 @@ $borderRadius: 20px
   background-color: $white
   border-bottom-left-radius: $borderRadius
   border-top-left-radius: $borderRadius
-  padding: 20px 10px 20px 20px
+  padding: 20px 5px 20px 20px
   transition: .3s ease
   z-index: 9999
 
@@ -22,7 +22,7 @@ $borderRadius: 20px
   .pointsWrap
     max-height: 100%
     overflow-y: auto
-    margin-right: 10px
+    padding-right: 15px
     padding-bottom: 150px
 
     .dataHeader
